2010-04-06 Kay Strobach  <info@kay-strobach.de>

	* initial code generated with kickstarter